--- a/src/Search.css
+++ b/src/Search.css
@@ -1,11 +1,10 @@
 .button {
     background-color: blueviolet;
     border: none;
+    border-radius: 10px;
     color: white;
-    /* padding: 19px 40px; */
     text-align: center;
     font-size: 16px;
-    /* margin: 4px 2px; */
     opacity: 0.6;
     transition: 0.3s;
     display: inline-block;
