--- a/src/movieList.css
+++ b/src/movieList.css
@@ -6,24 +6,30 @@
 }
 .movieList-Sub{
     display: block;
-    width: 60%;
+    width: 65%;
+}
+
+h3{
+    margin-bottom: -10px;
 }
 .list {
     margin: 2em 0;
     font-size: 1rem;
     width: 500px;
-    /* position: relative; */
-    display: flex;
-    flex-direction: column;
     width: 290px;
-    padding: 0;
-    border: none;
+    display: inline-grid;
+    justify-content: center;
+    padding: 5px;
+    border: 1pc solid rgba(211, 211, 211, 0.308);
+    margin-right: 20px;
     border-radius: .28571429rem;
 }
 
 .button {
     background-color: #f4511e;
     border: none;
+    width: fit-content;
+    border-radius: 10px;
     color: white;
     padding: 10px 20px;
     text-align: center;
@@ -40,20 +46,18 @@
        color: red;
    }
 
-   .button,button::after {
-        color: black
-    }
 
    .img {
-    max-width: 50%;
+    max-width: 70%;
     height: auto;
   }
 
   li {
       list-style: none;
+      width: 200px;
   }
 
   .nomList {
       width: 40%;
-      
+      margin-right: 50px;
   }
